# pennylane-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  SECURITY.md  context7.json  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  spec-watch.yml
docs/: getting-started.fr.md  getting-started.md  index.fr.md  index.md
docs/api/: clients.md  errors.md  filters.md  firm.md  oauth.md  pagination.md  webhooks.md
docs/api/company/: accounting.md  analytics.md  banking.md  e-invoicing.md  exports.md  invoicing.md  mandates.md  misc.md  purchases.md
docs/design/: resource-map.md
docs/guides/: accounting.fr.md  accounting.md  authentication.fr.md  authentication.md  e-invoicing.fr.md  e-invoicing.md  errors-and-retries.fr.md  errors-and-retries.md  firm-api.fr.md  firm-api.md  invoicing.fr.md  invoicing.md  oauth.fr.md  oauth.md  pagination.fr.md  pagination.md  webhooks.fr.md  webhooks.md
examples/: bulk_read_async.py  einvoice_import.py  firm_portfolio.py  invoicing_lifecycle.py  quickstart.py  webhook_receiver.py
scripts/: check_coverage.py  check_parity.py  mkdocs_hooks.py  show_endpoint.py  update_specs.py
specs/: firm_v1.json
src/pennylane_sdk/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _models.py  _pagination.py  _resource.py  _throttle.py  filters.py  oauth.py  webhooks.py
src/pennylane_sdk/resources/company/: __init__.py  accounting.py  bank_accounts.py  billing_subscriptions.py  categories.py  changelogs.py  commercial_documents.py  customer_invoice_templates.py  (+18 more)
tests/: conftest.py  test_base_client.py  test_client.py  test_exceptions.py  test_files.py  test_filters.py  test_models.py  test_oauth.py  test_pagination.py  test_review_fixes.py  test_throttle.py  test_webhooks.py
tests/company/: test_accounting.py  test_bank_accounts.py  test_billing_subscriptions.py  test_categories.py  test_changelogs.py  test_commercial_documents.py  test_customer_invoice_templates.py  test_customer_invoices.py  test_customers.py  test_e_invoices.py  test_exports.py  test_file_attachments.py  test_journals.py  test_ledger_accounts.py  test_ledger_entries.py  test_ledger_entry_lines.py  test_mandates.py  test_me.py  test_products.py  test_purchase_requests.py  test_quotes.py  test_supplier_invoices.py  test_suppliers.py  test_transactions.py  test_webhook_subscriptions.py
tests/firm/: test_accounting.py  test_banking.py  test_categories.py  test_changelogs.py  test_companies.py  test_dms.py  test_exports.py  test_invoicing.py
tests/integration/: conftest.py  test_error_handling.py  test_firm_readonly.py  test_readonly_sweep.py  test_write_journey.py
(+44 files in other folders)
